--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 *.userosscache
 *.sln.docstates
 
+# Conan stuff
+conan.lock
+conanbuildinfo.cmake
+conanbuildinfo.txt
+conaninfo.txt
+graph_info.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
