Added first unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,19 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED Off)
 
 include(conanbuildinfo.cmake)
-conan_basic_setup()
+conan_basic_setup(TARGETS)
 
 add_executable(jsmach_uml)
 target_sources(jsmach_uml PUBLIC main.cpp "UMLController.cpp" "UMLAttribute.cpp" "UMLClass.cpp" "UMLRelationship.cpp" "UMLModel.cpp" "JSONFileSys.cpp")
 
-target_link_libraries(jsmach_uml ${CONAN_LIBS})
+target_link_libraries(jsmach_uml CONAN_PKG::nlohmann_json)
 
-# eventually when you have libraries/dependences
-#   find_package(<LibraryName> REQUIRED)
-#   target_link_libraries(uml PUBLIC <whatever library you need>)
+FILE(GLOB TEST_FILES tests/*.cpp)
+
+add_executable(jsmach_tests tests/UnitTests.cpp ${TEST_FILES})
+target_sources(jsmach_tests PUBLIC "UMLController.cpp" "UMLAttribute.cpp" "UMLClass.cpp" "UMLRelationship.cpp" "UMLModel.cpp" "JSONFileSys.cpp")
+target_link_libraries(jsmach_tests CONAN_PKG::catch2 CONAN_PKG::nlohmann_json)
+
+
+enable_testing()
+add_test (NAME unit_tests COMMAND jsmach_tests)
