--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,26 @@
 cmake_minimum_required (VERSION 3.17.0)
+
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake)
+
 project(UML_CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED Off)
 
-include(conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(Catch2 CONFIG REQUIRED)
 
 add_library(uml)
 target_sources(uml PRIVATE "UMLController.cpp" "UMLAttribute.cpp" "UMLClass.cpp" "UMLRelationship.cpp" "UMLModel.cpp" "JSONFileSys.cpp" "UMLException.hpp" "ConsoleView.cpp")
-target_link_libraries(uml CONAN_PKG::nlohmann_json)
+target_link_libraries(uml PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
 
 add_executable(jsmach_uml)
 target_sources(jsmach_uml PUBLIC main.cpp)
-target_link_libraries(jsmach_uml uml)
+target_link_libraries(jsmach_uml PRIVATE uml nlohmann_json nlohmann_json::nlohmann_json)
+
 
 add_executable(jsmach_tests)
 target_sources(jsmach_tests PUBLIC tests/UnitTests.cpp tests/UMLModel_Test.cpp)
-target_link_libraries(jsmach_tests uml CONAN_PKG::catch2)
+target_link_libraries(jsmach_tests PRIVATE uml Catch2::Catch2 Catch2::Catch2WithMain)
 
 
 enable_testing()
