--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED Off)
 
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(Catch2 CONFIG REQUIRED)
-find_package(unofficial-nana CONFIG REQUIRED)
+find_package(wxWidgets REQUIRED)
 
 add_library(uml)
 target_sources(uml PRIVATE "GUIController.cpp" "GUIView.cpp" "UMLController.cpp" "UMLClass.cpp" "UMLRelationship.cpp" "UMLModel.cpp" "JSONFileSys.cpp" "UMLException.hpp" "ClassMethod.cpp" "ClassField.cpp" "MethodParameter.cpp" "ConsoleView.cpp")
-target_link_libraries(uml PRIVATE nlohmann_json nlohmann_json::nlohmann_json unofficial::nana::nana)
+target_link_libraries(uml PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
 
 add_executable(jsmach_uml)
 target_sources(jsmach_uml PUBLIC main.cpp)
-target_link_libraries(jsmach_uml PRIVATE uml nlohmann_json nlohmann_json::nlohmann_json)
+target_link_libraries(jsmach_uml PRIVATE uml nlohmann_json nlohmann_json::nlohmann_json ${wxWidgets_LIBRARIES})
+target_include_directories(jsmach_uml PRIVATE ${wxWidgets_INCLUDE_DIRS})
+
 
 
 add_executable(jsmach_tests)
